Se realizó una modificación en la página html.
Se insertó una línea de nueva línea de texto y se agregó una imagen.

--- a/Prueba.html
+++ b/Prueba.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Buenas días Colombiaaaaa</h1>
-    <h2>comentario de prueba</h2>
+    <h2>Este comentario es de prueba y debajo de él se insertará una imagen</h2>
+    <center>
+        <img src="https://i.blogs.es/4e5da4/github3/450_1000.jpg" alt="">
+    </center>
 </body>
 </html>
